Cert-Manager/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: default
  labels:
    name: ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    # cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
      - mydomain.com
      secretname: api-tls-secret # The Certificate generated Secret
  ingressClassName: nginx
  rules:
    - host: mydomain.com
      http:
        paths:
          - path: /user-api(/|$)(.*) # /user-api/get-users -> /get-users
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-svc
                port: 
                  number: 80
